--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/jquery": "^3.3.25",
+    "bootstrap": "^4.1.3",
     "css-loader": "^2.0.0",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1",
+    "jwt-decode": "^2.2.0",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
+    "popper.js": "^1.14.6",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1",
