--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@types/jquery": "^3.3.25",
     "bootstrap": "^4.1.3",
+    "classnames": "^2.2.6",
     "css-loader": "^2.0.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
