--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "popper.js": "^1.14.6",
+    "query-string": "^6.2.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-redux": "^6.0.0",
